<resources>
    <string name="app_name">SonggolDoctor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_list_title">최근 및 즐겨찾기 병원</string>
    <string name="favorite_hospital">즐겨찾기</string>
    <string name="recent_hospital">최근</string>
    <string name="book">예약하기</string>
    <string name="call">전화하기</string>
    <string name="book_u"><u>예약하기</u></string>
    <string name="call_u"><u>전화하기</u></string>
    <string name="hospitalName">병원이름</string>
    <string name="hospitalAddress">특별택시 마구마구 포장도로 104</string>
    <string name="worktime">진료시간</string>
    <string name="weekday">예, 시, 요, 일</string>
    <string name="worktimeexample">12:00 ~ 15:00</string>
    <string name="drugAdvice"><u>처방전</u></string>
    <string name="commentAdvice"><u>의사 코멘트</u></string>
    <string name="diagnosisText"><u>진료 기록</u></string>
    <string name="actionDial"><u>전화 걸기</u></string>
    <string name="login"><u>로그인</u></string>
    <string name="ID"><u>아이디</u></string>
    <string name="password"><u>비밀번호</u></string>
    <string name="save"><u>저장</u></string>
    <string name="signin"><u>회원가입</u></string>
    <string name="songgolDoctor"><u>송골닥터</u></string>
    <string name="main_activity_hospital">병원 찾기</string>
    <string name="main_activity_book">예약 내역</string>
    <string name="main_activity_diagnosis">검진 내역</string>
    <string name="main_activity_myinfo">내 정보</string>
    <string name="book_apply">예약 신청</string>
    <string name="pick_date">날짜 선택</string>
    <string name="pick_time">시간 선택</string>
    <string name="default_string">DEFAULT</string>
    <string name="book_status">예약 상태:</string>
    <string name="book_status_accepted">수락</string>
    <string name="book_status_declined">거절</string>
    <string name="book_status_none">미수락</string>
    <string name="book_see_reason"><u>사유확인</u></string>
    <string name="etc"><u>외</u></string>
    <string name="diagnosis_list_title"><u>진료기록</u></string>
    <string name="info_list_title"><u>내 정보</u></string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="fail"><u>x</u></string>
    <string name="submit"><u>가입하기</u></string>
</resources>
