<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <TextView
                android:id="@+id/book_fragment_hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text = "@string/hospitalName"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <TextView
                app:layout_constraintTop_toBottomOf="@+id/book_fragment_hospital_name"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop = "5dp"
                android:text="@string/default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/book_fragment_date"
                android:textSize="16sp"/>
        <TextView
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/book_fragment_request_status"
                android:textSize="16sp"/>
        <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/book_fragment_request_status"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/book_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/book_fragment_status_fixed"
                android:textSize="16sp"/>
        <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/book_see_reason"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/book_fragment_reason"
                android:textSize="16sp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>