<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <TextView
                android:id="@+id/diag_fragment_hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text = "@string/hospitalName"
                android:textStyle="bold"
                android:textSize="20sp"/>
        <TextView
                app:layout_constraintTop_toBottomOf="@+id/diag_fragment_hospital_name"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop = "5dp"
                android:text="@string/default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diag_fragment_date"
                android:textSize="16sp"/>
        <TextView
                android:text="@string/default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diag_fragment_howMany"
                android:textSize="16sp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/diag_fragment_etc"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/diag_fragment_howMany"
                android:layout_marginTop="8dp"
                android:text="@string/default_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diag_fragment_drug"
                android:textSize="16sp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/diag_fragment_howMany" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/etc"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diag_fragment_etc" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>