<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/hospital_activity_scrollview"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.gms.maps.MapView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:id="@+id/hospital_activity_mapview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/hospital_activity_hospital_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/hospitalName"
                    app:layout_constraintTop_toBottomOf="@+id/hospital_activity_mapview"
                    app:layout_constraintStart_toStartOf="parent" android:textSize="16sp"
                    android:layout_marginStart="8dp" android:textStyle="bold"/>
            <TextView
                    android:id="@+id/hospital_activity_hospital_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/hospitalAddress"
                    app:layout_constraintTop_toBottomOf="@+id/hospital_activity_hospital_name"
                    app:layout_constraintStart_toStartOf="parent" android:textSize="12sp"
                    android:layout_marginStart="8dp" android:textStyle="bold"/>
            <View   android:id="@+id/hospital_activity_linesperator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/hospital_activity_hospital_address"/>
            <TextView
                    android:id="@+id/hospital_activity_text_worktime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/worktime"
                    app:layout_constraintTop_toBottomOf="@+id/hospital_activity_linesperator"
                    app:layout_constraintStart_toStartOf="parent" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textStyle="bold"/>
            <TableLayout
                    android:id="@+id/hospital_activity_tablelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:numColumns="2"
                    app:layout_constraintTop_toBottomOf="@+id/hospital_activity_text_worktime"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            >

            </TableLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>