<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/book_fragment_LinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton
                    android:layout_width="@dimen/place_autocomplete_prediction_height"
                    android:layout_height="match_parent"
                    android:id="@+id/book_activity_back_button"
                    app:srcCompat="@android:drawable/ic_menu_revert"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:background="@android:color/transparent"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/book_activity_title"
                    android:text="@string/book"
                    android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="24sp"
                    android:textAlignment="center" android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="75dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="75dp"/>
            <View
                    android:id="@+id/book_activity_title_separator"
                    android:layout_marginTop="5dp"
                    style="@style/Divider"
                    app:layout_constraintTop_toBottomOf="@+id/book_activity_title"
                    app:layout_constraintLeft_toLeftOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <ScrollView
                android:id="@+id/book_activity_scrollview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15">
            <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                         android:layout_height="wrap_content">
                <TextView
                        android:text="@string/pick_date"
                        android:id="@+id/book_activity_pick_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="15sp"
                        android:textAlignment="textStart"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/book_activity_pick_date_check_box"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/book_activity_pick_date_check_box"/>
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/book_activity_pick_date_check_box"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"
                        android:focusable="auto"/>
                <DatePicker
                        android:id="@+id/book_activity_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/transparent"
                        android:divider="@android:color/transparent"
                        app:layout_constraintTop_toBottomOf="@+id/book_activity_pick_date_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:visibility="visible"/>
                <View
                        android:id="@+id/book_activity_pick_time_separator"
                        app:layout_constraintTop_toBottomOf="@+id/book_activity_calendar"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/Divider"/>
                <TextView
                        android:text="@string/pick_time"
                        android:id="@+id/book_activity_pick_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="15sp"
                        android:textAlignment="textStart"
                        app:layout_constraintTop_toBottomOf="@+id/book_activity_pick_time_separator"
                        app:layout_constraintStart_toEndOf="@+id/book_activity_pick_time_check_box"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/book_activity_pick_time_check_box"/>
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/book_activity_pick_time_check_box"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/book_activity_pick_time_separator"
                        android:layout_marginTop="5dp"
                        android:focusable="auto"/>
                <ListView
                        android:id="@+id/book_activity_pick_time_list_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/book_activity_pick_time_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="15dp"/>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
        <Button
                android:id="@+id/book_activity_apply_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/book_apply"
                android:layout_weight="1"
                style="@android:style/Widget.Button"
                android:textAppearance="@style/TextAppearance.AppCompat" android:textAlignment="center"
                android:background="@android:color/holo_blue_dark" android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>